third_party/move/move-prover/tests/sources/functional/proof/conditional_proof.exp
Move prover returns: exiting with verification errors
warning: proof uses trusted assumption
   ┌─ tests/sources/functional/proof/conditional_proof.move:33:13
   │
33 │             assume [trusted] true;
   │             ^^^^^^^^^^^^^^^^^^^^^^

warning: proof uses trusted assumption
   ┌─ tests/sources/functional/proof/conditional_proof.move:54:13
   │
54 │             assume [trusted] true;
   │             ^^^^^^^^^^^^^^^^^^^^^^

error: lemma requirement not satisfied
   ┌─ tests/sources/functional/proof/conditional_proof.move:64:9
   │
64 │         apply positive_bound(x);  // error: x might be 0
   │         ^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/proof/conditional_proof.move:58: maybe_zero
   =         x = <redacted>
   =     at tests/sources/functional/proof/conditional_proof.move:64: maybe_zero (spec)
